# minifitstopng

./: .gitignore  CMakeLists.txt  README.md  hist.cpp  hist.h  main.cpp  par_run.py  stk.cpp  stk.h
cmake/: FindASCDM.cmake
